k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todolist
  labels:
    name: todolist
    app: todolist
    environment: dev
